Added: installed pymysql library and imported in project

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ djangorestframework = "*"
 gunicorn = "*"
 whitenoise = "*"
 dj-database-url = "*"
+pymysql = "*"
 
 [requires]
 python_version = "3.8"
